--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.4"
+        "phpunit/phpunit": "^9.4",
+        "friendsofphp/php-cs-fixer": "^3.1",
+        "nunomaduro/larastan": "^0.7.12",
+        "nunomaduro/phpinsights": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -39,8 +42,10 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "cs": "vendor/bin/php-cs-fixer fix",
+        "insights": "vendor/bin/phpinsights",
+        "stan": "vendor/bin/phpstan analyse"
     },
     "config": {
         "sort-packages": true
