--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "authors": [
         {
             "name": "grixu",
-            "email": "mg@grixu.dev",
+            "email": "mateusz.gostanski@gmail.com",
             "role": "Developer"
         }
     ],
