--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,13 @@
         "laravel/passport": "^10.1"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.4",
+        "brainmaestro/composer-git-hooks": "^2.8",
         "friendsofphp/php-cs-fixer": "^3.1",
         "nunomaduro/larastan": "^0.7.12 || ^1.0.0",
-        "nunomaduro/phpinsights": "^2.0"
+        "nunomaduro/phpinsights": "^2.0",
+        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^9.4",
+        "spatie/x-ray": "^1.1"
     },
     "autoload": {
         "psr-4": {
@@ -45,7 +47,9 @@
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
         "cs": "vendor/bin/php-cs-fixer fix",
         "insights": "vendor/bin/phpinsights",
-        "stan": "vendor/bin/phpstan analyse"
+        "stan": "vendor/bin/phpstan analyse",
+        "cghooks": "vendor/bin/cghooks",
+        "xray": "vendor/bin/x-ray src"
     },
     "config": {
         "sort-packages": true
@@ -54,6 +58,21 @@
         "laravel": {
             "providers": [
                 "Grixu\\PassportModuleAuth\\PassportModuleAuthServiceProvider"
+            ]
+        },
+        "hooks": {
+            "config": {
+                "stop-on-failure": ["pre-commit", "commit-msg"]
+            },
+            "pre-commit": [
+                "export PATH=\"/usr/local/homebrew/bin:$PATH\"",
+                "./vendor/bin/x-ray src",
+                "./vendor/bin/php-cs-fixer fix"
+            ],
+            "commit-msg": "grep -E '^((feat|chore|docs|refactor|fix){1}\\:{1}\\s{1}[a-z]{1}|Merge branch).*' $1",
+            "post-merge": [
+                "export PATH=\"/usr/local/homebrew/bin:$PATH\"",
+                "composer install"
             ]
         }
     }
